# audio2text

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Modelfile  Pipfile  README.md  docker-compose.yml  requirements.txt
data/: sample.json
src/: convert-m4a.rs  convert.rs  diarizer.py  diarizer.rs  main.py  main.rs  record.py  sound-to-text.rs  whisper.rs
src/entities/: diarizer.py  local_llm.py  reader.py  record.py  tts.py
src/usecases/: conversation.py  zoom2text.py
src_py/: convert_m4a.py  diarizer.py  record.py  requirements.txt  secret_example.py
