[package]
name = "cookbook-rust"
version = "0.0.1"
authors = ["motacapla"]
edition = "2021"

[dependencies]
anyhow = "1.0.97"
cpal = "0.15.3"
ffmpeg-next = "7.1.0"
hound = "3.5.1"
rubato = "0.16.1"
whisper-rs = "0.13"
whisper-rs-sys = "0.11.1"

symphonia = { version = "0.5.4", features = ["aac", "isomp4", "wav"] }
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "convert"
path = "src/convert.rs"

[[bin]]
name = "sound-to-text"
path = "src/sound-to-text.rs"

# cargo run --bin convert-m4a -- -i ./data/input.m4a -o ./data/output.wav
[[bin]]
name = "convert-m4a"
path = "src/convert-m4a.rs"

# cargo run --bin diarizer
[[bin]]
name = "diarizer"
path = "src/diarizer.rs"
